# routes/expense.routes.js
@@ -9,7 +9,7 @@ const {
 
 const router = express.Router({ tags: ["Expense"] });
 
-router.get("/all", getAllExpenses);
+router.post("/all", getAllExpenses);
 
 router.get("/:id", getExpenseById);
 
